--- a/css/creative.css
+++ b/css/creative.css
@@ -12,7 +12,7 @@ body {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 hr {
-  border-color: #F05F40;
+  border-color: #2b578c;
   border-width: 3px;
   max-width: 50px;
 }
@@ -23,7 +23,7 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #F05F40;
+  color: #2b578c;
 }
 a:hover,
 a:focus {
@@ -43,7 +43,7 @@ p {
   margin-bottom: 20px;
 }
 .bg-primary {
-  background-color: #F05F40;
+  background-color: #2b578c;
 }
 .bg-dark {
   background-color: #222222;
@@ -70,7 +70,7 @@ aside {
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: #F05F40;
+  color: #2b578c;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -94,11 +94,11 @@ aside {
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
-  color: #F05F40;
+  color: #2b578c;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
-  color: #F05F40 !important;
+  color: #2b578c !important;
   background-color: transparent;
 }
 .navbar-default .nav > li.active > a:hover,
@@ -130,7 +130,7 @@ aside {
     border-color: rgba(34, 34, 34, 0.05);
   }
   .navbar-default.affix .navbar-header .navbar-brand {
-    color: #F05F40;
+    color: #2b578c;
     font-size: 14px;
   }
   .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -143,7 +143,7 @@ aside {
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
-    color: #F05F40;
+    color: #2b578c;
   }
 }
 header {
@@ -281,7 +281,7 @@ header .header-content .header-content-inner p {
   margin: 0 auto 20px;
 }
 .text-primary {
-  color: #F05F40;
+  color: #2b578c;
 }
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -337,8 +337,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: white;
-  background-color: #F05F40;
-  border-color: #F05F40;
+  background-color: #2b578c;
+  border-color: #2b578c;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -350,8 +350,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #ee4b28;
-  border-color: #ed431f;
+  background-color: #5483bb;
+  border-color: #5483bb;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -376,11 +376,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #F05F40;
-  border-color: #F05F40;
+  background-color: #2b578c;
+  border-color: #2b578c;
 }
 .btn-primary .badge {
-  color: #F05F40;
+  color: #2b578c;
   background-color: white;
 }
 .btn {
@@ -422,6 +422,7 @@ body {
   display:none;
   padding: 10px 13px !important;
   border-radius: 30px !important;
+  background-color: rgba(43, 87, 140, 0.72);
 }
 .container-fluid >.navbar-collapse, .container-fluid >.navbar-header, .container>.navbar-collapse, .container >.navbar-header{
   margin-left: 0px !important;
@@ -436,11 +437,11 @@ body {
   padding: 25px 0 !important;
 }
 .panel-primary>.panel-heading{
-  background-color: #F05F40 !important;
-  border-color: #F05F40 !important;
+  background-color: #2b578c !important;
+  border-color: #2b578c !important;
 }
 .panel-primary{  
-  border-color: #F05F40 !important;
+  border-color: #2b578c !important;
 }
 .btn-primary{
   border-radius: 5px;
@@ -452,4 +453,10 @@ body {
 }
 .wrapper-body{
   min-height: 800px;
+}
+.table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: #edf5fd;
+}
+.form-control{
+  border: 1px solid #2f6ebb;
 }
