--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,7 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #F05F40;
+@theme-primary:    #2b578c;
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
